--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
 
 <h1>My First Heading</h1>
+  <p class="line-1 anim-typewriter">We Want a compensatory attempt for all</p>
 
 <p>My first paragraph.</p>
 
