--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - CSS Typewriter Animation</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel="stylesheet" href="./style.css">
+
+</head>
 <body>
+<!-- partial:index.partial.html -->
+<div class="typewriter">
+  <h1>The cat and the most popular people on the planet love me</h1>
 
-<h1>My First Heading</h1>
-  <p class="line-1 anim-typewriter">We Want a compensatory attempt for all</p>
+ <p style="color:white">This is a paragraph.</p>
+<p style="color:blue">This is another paragraph.</p> 
 
-<p>My first paragraph.</p>
-
+</div>
+<!-- partial -->
+ 
 </body>
 </html>
