--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <div class="typewriter">
-  <h1>The cat and the most popular people on the planet love me</h1>
+  <h1>UPSC and UGC-NET (Sociology)</h1>
 
  <p style="color:white">This is a paragraph.</p>
 <p style="color:blue">This is another paragraph.</p> 
