--- a/downloads.html
+++ b/downloads.html
@@ -26,7 +26,7 @@
   </tr>
   <tr>
     <td>Class 8th </td>
-    <td>Click Here</td>
+    <td> <a href="GEO/8th - Geography-Hindi-.pdf">Click Here</a>  </td>
     
   </tr>
   <tr>
