--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <button>Download</button>
 </a> 
 
-<p style="color:yellow;font-size:20px">Daily Current Affairs Quiz</p> <a href="downloads.html">
+<p style="color:yellow;font-size:20px">Daily Current Affairs Quiz</p> <a href="Quiz/index.html">
 <button>Click me to go to Quiz</button>
 </a> 
 
