--- a/New/index.html
+++ b/New/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Edit_New</title>
+  <title>Mast Life IAS</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
