--- a/AugustQuiz/index.html
+++ b/AugustQuiz/index.html
@@ -20,13 +20,13 @@ Qt knowledge test
 </head>
     
 <body>
-<div id="header"><h2>Qt knowledge test</h2></div>
+<div id="header"><h2>Current Affairs knowledge test</h2></div>
 <div id="content" class="startPage">
     <div id='main'>
         <div id='status'></div>
         <div id='question'>
             
-            <button onclick='startQuiz(-1)' class='btn'>all questions</button><br>
+            <button onclick='startQuiz(-1)' class='btn'>Start Quiz</button><br>
             <noscript>
                 <p><br>It seems that your browser has javascript disabled.<br>
                 Unfortunately, this page will not run without js. :-( <br>
@@ -36,6 +36,6 @@ Qt knowledge test
         <div id='hint'></div>
     </div>
 </div>
-<div id="footer"><p>Found a bug? <a href="https://katecpp.wordpress.com/contact" target="_blank">Let me know.</a></p></div>
+<div id="footer"><p>Go to the homepage <a href="https://cheesetoastmaker.wordpress.com/contact" target="_blank"> Home </a></p></div>
 </body>
 </html>
